# gitwebhooks

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  README.zh.md  git-webhooks-server.ini.sample  git-webhooks-server.py  git-webhooks-server.py.backup  git-webhooks-server.service.sample  gitwebhooks-cli  gitwebhooks.ini.sample  install.sh  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
gitwebhooks/: __init__.py  __main__.py  cli.py  server.py
gitwebhooks/auth/: __init__.py  custom.py  factory.py  gitee.py  github.py  gitlab.py  verifier.py
gitwebhooks/cli/: __init__.py  config.py  init_wizard.py  prompts.py  service.py
gitwebhooks/config/: __init__.py  loader.py  models.py  registry.py  server.py
gitwebhooks/handlers/: __init__.py  base.py  custom.py  factory.py  gitee.py  github.py  gitlab.py  request.py
gitwebhooks/logging/: __init__.py  setup.py
gitwebhooks/main/: __init__.py  __main__.py
gitwebhooks/models/: __init__.py  config.py  provider.py  request.py  result.py
gitwebhooks/utils/: __init__.py  constants.py  exceptions.py  executor.py  systemd.py
scripts/: pre-release-check.sh
specs/001-cli-service-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-config-init-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-config-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-optimize-webhooks-server/: baseline-pylint.txt  baseline-tests.txt  baseline.md  data-model.md  final-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-refactor-codebase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  __main__.py  conftest.py
tests/fixtures/: __init__.py  custom_payloads.py  gitee_payloads.py  github_payloads.py  gitlab_payloads.py  sample_config.ini  signature_builder.py
tests/integration/: __init__.py  test_command_execution.py  test_config_discovery.py  test_config_init.sh  test_config_view_integration.py  test_custom_webhook.py  test_edge_cases.py  test_gitee_webhook.py  test_github_webhook.py  test_gitlab_webhook.py
tests/test_auth/: __init__.py
tests/test_config/: __init__.py
tests/test_handlers/: __init__.py
tests/test_integration/: __init__.py
(+29 files in other folders)
